# Payjar

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  COMPLETION_REPORT.txt  Cargo.toml  IDE_README.md  INDEX.md  LICENSE  LICENSE.md  Main.py  QUICKSTART.md  README  README.md  SETUP.md  __init__.py  __main__.py  build.txt  esolangInter.py  makefile  package-lock.json  package.json  payjar-ide.py  payjar-info.txt  payjar.c  pjc  py-project.toml  setup.bat  setup.sh  syntax.py  test_init.py  ui.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
.private/: inf.toml
Payjar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: advanced.pj  hello.pj
examples/pack/: main.pj  rect.pj
extension/: language-config.json  manifest.json  package-lock.json  package.json  payjar.tmLanguage.json
module/: __init__.py  esolangInter.py  setup.py  syntax.py  ui.py
react-ide/: README.md  index.html  package-lock.json  package.json  payjar.ts
react-ide/src/: App.tsx  syntax.ts
react-ide/src-tauri/: Cargo.toml  tauri.conf.json
react-ide/src-tauri/src/: main.rs
react-ide/src/components/: Editor.tsx
react-ide/src/styles/: index.css
src/: main.rs  payjar.rs
src/payjar/: ast.rs  builtins.rs  gui_channel.rs  lexer.rs  mod.rs  parser.rs  sqlite3.rs
tests/: test_init.py
