[package]
name = "Payjar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Payjar"
path = "src/main.rs"

[dependencies]
eframe    = "0.27"
egui      = "0.27"
rfd       = "0.14"
rusqlite  = { version = "0.31", features = ["bundled"] }
regex     = "1"
serde_json = "1"
tempfile  = "3"
sha2      = "0.10"
md-5      = "0.10"
base64    = "0.22"

[profile.release]
overflow-checks = true

[package.metadata.deb]
maintainer = "Femn0X"
copyright = "2026,Femn0X"
license-file = ["LICENSE", "0"]
extended-description = """\
A longer description of your package.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/Payjar", "usr/bin/", "755"],
    ["README", "usr/share/doc/README", "644"]
]
